# tickms

./: .clang-format  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  meson.build  meson_options.txt
.github/: SECURITY.md
.github/workflows/: ci.yml
config/: tickms_version.h.in
include/: tickms.h  tickms_conf.h
src/: tickms.c
tests/: meson.build  run_smoke_install.py  smoke_install.sh  test_tickms.c  test_tickms_c11.c  test_tickms_config_matrix.c  test_tickms_noatomics.c
